# broadcaster

./: code_proxy.json  gui.py  links  pyproject.toml  test.py  test2.py
core/: account_pass_changer.py  models.py  settings.py  tg_api_connector.py
utils/: exceptions.py  sqlite_reader.py
