[tool.poetry]
name = "broadcastertest"
version = "0.1.0"
description = ""
authors = ["Leonid Sliusar <loslyusar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
telethon = "^1.29.2"
pydantic = "^2.1.1"
pydantic-settings = "^2.0.3"
opentele = "^1.15.1"
aiohttp = "^3.8.5"
fastapi = {extras = ["all"], version = "^0.101.1"}
python-socks = {extras = ["asyncio"], version = "^2.3.0"}
requests = {extras = ["socks"], version = "^2.31.0"}
aiohttp-socks = "^0.8.0"
streamlit = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
